# dagster-bigdata-poc

./: .gitignore  README.md  STREAMING_ARTICLE.md  STREAMING_COMPONENTS_README.md  STREAMING_README.md  demo_streaming.py  demo_streaming_components.py  job_config.yaml  process_bam.py  process_sam.py  pyproject.toml  run_bam_streaming.py  stream_bam.py
processed/: processed_1.json
src/dagster_bigdata_poc/: definitions.py  streaming_ops_demo.py
src/dagster_bigdata_poc/components/: bam_chunk_processor.py  bam_chunk_streamer.py  bam_file_sensor.py  bam_pipeline.yaml  bam_processing_pipeline.py  stream_bam.py  streaming_bam_chunk_processor.py  streaming_bam_chunk_streamer.py  streaming_bam_file_sensor.py  types.py
src/dagster_bigdata_poc/defs/: bam_streaming.py
