[project]
name = "dagster_bigdata_poc"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.2",
    "numpy>=1.24.0",
    "psutil>=7.1.3",
    "pysam>=0.23.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_bigdata_poc"
registry_modules = [
    "dagster_bigdata_poc.components.*",
]


